<resources>
    <string name="app_name">doorbell_mobile</string>
    <string name="title_home">Ring History</string>
    <string name="title_dashboard">Recordings</string>
    <string name="title_notifications">Profile</string>
    <string name="app_logo">App Logo</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="logout_btn">Logout</string>
    <string name="login_btn">Login</string>
    <string name="status_icon">status_icon</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="no_call_history">No call history available</string>
    <string name="no_record_history">No record history available</string>
    <string name="record_start">Start Time: %s</string>
    <string name="record_end">End Time: %s</string>
    <string name="record_dur">Duration: %s</string>
    <string name="img_des">TODO</string>
    <string name="avatar">avatar</string>
    <string name="profile_id_label">ID:</string>
    <string name="profile_id_content">123</string>
    <string name="profile_username_label">Username:</string>
    <string name="profile_username_content">johndoe</string>
    <string name="profile_email_label">Email:</string>
    <string name="profile_email_content">john@example.com</string>
    <string name="error_empty_credentials">All field are required</string>
    <string name="error_connection_failed">Failed to connect server</string>
    <string name="error_invalid_credentials">Invalid credentials</string>
    <string name="error_unexpected">Unexpected error: %s</string>
    <string name="login_successful">Login successfully</string>
    <string name="error_video_unavailable">Video is unavailable</string>
    <string name="error_video_check">Error occurs when check video: %s</string>
    <string name="back">back_btn</string>
    <string name="incoming_name">Caller Name</string>
    <string name="incoming_time">30s</string>
    <string name="incoming_reject_btn">Reject</string>
    <string name="incoming_accept_btn">Accept</string>
    <string name="room_title">Join Room</string>
    <string name="room_end_call">End Call</string>
    <string name="room_mute_unmute">Mute/Unmute</string>
    <string name="room_toggle_speaker">Toggle Speaker</string>
    <string name="room_err_message">Error occurred while loading video</string>
    <string name="connecting">Đang kết nối...</string>
    <string name="mute_unmute_des">Mute/Unmute</string>
    <string name="record_mic">Record</string>
    <string name="send">Send</string>
</resources>