<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_incoming_blur">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/avatar"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_marginBottom="32dp"
            android:scaleType="centerCrop"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.Circle"
            app:srcCompat="@drawable/avatar" />

        <TextView
            android:id="@+id/textCallerName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/incoming_name"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <!-- Controls -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/btnReject"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:background="@drawable/circle_bg_red"
            android:contentDescription="@string/incoming_reject_btn"
            android:src="@drawable/ic_call_end"
            app:tint="@android:color/white" />

        <Space
            android:layout_width="120dp"
            android:layout_height="match_parent" />

        <ImageButton
            android:id="@+id/btnAccept"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:background="@drawable/circle_bg_green"
            android:contentDescription="@string/incoming_accept_btn"
            android:src="@drawable/ic_call"
            app:tint="@android:color/white" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>